# HessFit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
HessFit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
build_4Smart/: build_4Smart.py  printout_mod.py
examples/: GauHarm.chk  GauHarm.fchk  GauHarm.gjf  GauNonBon.chk  GauNonBon.fchk  GauNonBon.g16.chk  GauNonBon.gjf  atomtype.txt  but_ff_2.txt  but_qm.gjf  fort.7  gui.py  h2o2_qm.fchk  hessfit.mol2  hessfit4gau.chk  hessfit4gau.gjf  hessfit_GUI.py  hessfit_frcmod.txt  molecule.xyz  out.xyz  step1.json
hessfit/: __init__.py  average_across_types.py  build_4_hessfit.py  doublecheck.py  fit4dihe-boltz.py  fit4dihe-nonlin.py  fit4dihe.py  force_constant_mod.py  geom2atype.py  get_amass.py  get_mm_energy.py  guessBO.py  hessfit.py  hessfit.py.old  hessfit_dihes.py  hessfit_harmonic.py  log2scan.py  parser_gau.py  print_top.py  readin_opts.py  temp-atpye.py  vdwparms.py
json_files/: all_steps.json  build_4smart.json  file1.json  gauScan2com_json.json  step1.json  step2.json
molecular-viewer-app/: README.md  requirements.txt
smart_bond_angle/: out  parser_gau.py  set_bonds.py  set_module.py  smart_bonds_angles.py  template.json  trp_zion_631g.xyz
smart_dihedrals/: change_mmCOM.py  fit4dihe.py  gauScan2com.py  gcutil.py  get_mm_energy.py  log2scan.py
smart_harmonic/: build_4Smart.py  force_constant_mod.py  parser_gau.py  smart_bonds_angles.py
src/: 2hessian.py  SmartField.py  SmartField.sh  SmartField_dihes.py  SmartField_harmonic.py  build_dihes.py  gau2xyz.py  get_amass.py  (+10 more)
(+764 files in other folders)
